# low-level-drone-control-with-reservoir-learning

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/bf_controller/src/: lib.rs
crates/drone/src/: default_drone.rs  lib.rs
crates/flight_controller/: Cargo.toml
crates/flight_controller/src/: lib.rs
crates/loaders/: Cargo.toml
crates/loaders/src/: lib.rs
crates/loaders/src/default_laoder/: mod.rs
crates/loaders/src/file_loader/: mod.rs
crates/loggers/: Cargo.toml
crates/loggers/src/: lib.rs
crates/loggers/src/file_logger/: mod.rs
crates/loggers/src/memory_logger/: mod.rs
crates/loggers/src/rerun_logger/: mod.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/mse/: Cargo.toml
crates/mse/src/: lib.rs
crates/res/: Cargo.toml
crates/res/src/: lib.rs
crates/res/src/esn/: mod.rs
crates/res/src/izhikevich/: mod.rs
crates/res_controller/: Cargo.toml
crates/res_controller/src/: bf_rates.rs  dimensionality_reducer.rs  input.rs  input_mapping.rs  lib.rs
crates/res_controller/src/controllers/: mod.rs
crates/res_controller/src/controllers/esn/: esn_res.rs  mod.rs  repr.rs  setpoints.rs
crates/res_controller/src/controllers/izhikevich_controller/: mod.rs
crates/res_controller_training/: Cargo.toml  README.md  parse_combined.py
crates/res_controller_training/src/: lib.rs
crates/res_controller_training/src/eval/: angular_rate_stabilization.rs  mod.rs  open_loop_imitation_mse.rs
crates/res_controller_training/src/train/: esn.rs  izhikevich.rs  mod.rs
crates/res_controller_training/src/utils/: angular_rate_stabilization_db.rs  mod.rs
crates/res_controller_training/tests/: find_izhikevich.rs  results.rs
crates/ridge/src/: lib.rs
crates/sim_context/: Cargo.toml  README.md
crates/sim_context/src/: input_gen.rs  lib.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: lib.rs
crates/visualizer/: Cargo.toml
crates/visualizer/src/: sim.rs
crates/visualizer/src/ui/: menu.rs  simulation.rs
pre_trained_controllers/: internal_50
