[package]
name = "loaders"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "1.0.0", features = ["full"] }
flight_controller.workspace = true
nalgebra.workspace = true
drone.workspace = true
loggers.workspace = true
serde_json.workspace = true
res.workspace = true
base64 = "0.22.1"
ridge.workspace = true
res_controller.workspace = true
